Update to include s3 uploading

--- a/example.env
+++ b/example.env
@@ -11,3 +11,7 @@ SSLKEY=<SSL-KEY-PATH.pem>
 SSLCHAIN=<SSL-CHAIN-PATH.pem>
 
 NODE_ENV=<development/production>
+
+AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
+AWS_SECRET_KEY=<AWS_SECRET_KEY>
+S3_BUCKET=<S3_BUCKET>
