--- a/example.app.service
+++ b/example.app.service
@@ -18,6 +18,10 @@ Environment=SSLCHAIN=<SSL-CHAIN-PATH.pem>
 
 Environment=NODE_ENV=production
 
+Environment=AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
+Environment=AWS_SECRET_KEY=<AWS_SECRET_KEY>
+Environment=S3_BUCKET=<S3_BUCKET>
+
 Type=simple
 User=root
 ExecStart=<Node Executable> <code/app.js>
